@@ -1,3 +1,5 @@
+from __future__ import generators
+
 """
 This module implements a callback function that is used by the C code to
 add Python special methods to Objective-C classes with a suitable interface.
@@ -7,7 +9,7 @@ This module contains no user callable code.
 TODO:
 - Add external interface: Framework specific modules may want to add to this.
 """
-from objc import set_class_extender, selector
+from objc import set_class_extender, selector, runtime
 
 CONVENIENCE_METHODS = {}
 CLASS_METHODS = {}
@@ -44,112 +46,126 @@ set_class_extender(add_convenience_methods)
 # NOTE: the '!= 0' in the definition of the comparison function
 # is there to force conversion to type 'bool' on Python releases
 # that have such a type.
-def __contains__(self, elem):
-	return self.containsObject_(elem) != 0
-def __eq__1(self, other):
-	return self.isEqualTo_(other) != 0
-def __eq__2(self, other):
-	return self.isEqual_(other) != 0
-def __ne__(self, other):
-	return not (self.isEqual_(other) != 0)
-def __gt__(self, other):
-	return self.isGreaterThan_(other) != 0
-def __ge__(self, other):
-	return self.isGreaterThanOrEqualTo_(other) != 0
-def __lt__(self, other):
-	return self.isLessThan_(other) != 0
-def __le__(self, other):
-	return self.isLessThanOrEqualTo_(other) != 0
-def __repr__(self):
-	return self.description()
-def __len__1(self):
-	return self.count()
-def __len__2(self):
-	return self.length()
-def __getitem__1(self, key):
+
+def __getitem__objectForKey(self, key):
 	res = self.objectForKey_(key)
-	if res == None:
+	if res is None:
 		raise KeyError, key
 	return res
-def has_key_1(self, key):
+def has_key_objectForKey(self, key):
 	res = self.objectForKey_(key)
 	return not (res is None)
-def get_1(self, key, dflt=None):
+def get_objectForKey(self, key, dflt=None):
 	res = self.objectForKey_(key)
 	if res is None: 
 		res = dflt
 	return res
+CONVENIENCE_METHODS['objectForKey:'] = (('__getitem__', __getitem__objectForKey),
+					('has_key', has_key_objectForKey),
+					('get', get_objectForKey),
+					('__contains__', lambda self, elem: (self.objectForKey_(elem) != None)
+					 ))
 
-def __delitem__1(self, key):
-	self.removeObjectForKey_(key)
-def __setitem__1(self, key, value):
-	self.setObject_forKey_(value, key)
-def __getitem__2(self, idx):
-	res = self.objectAtIndex_(idx)
-	if res == None:
-		raise IndexError, idx
-	return res
-def __delitem__2(self, idx):
-	self.removeObjectAtIndex_(idx)
-def __setitem__2(self, idx, value):
-	self.replaceObjectAtIndex_withObject_(idx, value)
-def __hash__(self):
-	return self.hash()
-		
+CONVENIENCE_METHODS['removeObjectForKey:'] = (('__delitem__',
+					       lambda self, key: self.removeObjectForKey_( key ) ), )
 
-CONVENIENCE_METHODS['objectForKey:'] = (('__getitem__', __getitem__1), ('has_key', has_key_1), ('get', get_1))
-CONVENIENCE_METHODS['removeObjectForKey:'] = (('__delitem__', __delitem__1),)
-CONVENIENCE_METHODS['setObject:forKey:'] = (('__setitem__', __setitem__1),)
-CONVENIENCE_METHODS['count'] = (('__len__', __len__1),)
-CONVENIENCE_METHODS['description'] = (('__repr__', __repr__),)
-CONVENIENCE_METHODS['doesContain:'] = (('__contains__', __contains__),)
-CONVENIENCE_METHODS['hash'] = (('__hash__', __hash__),)
-CONVENIENCE_METHODS['isEqualTo:'] = (('__eq__', __eq__1),)
-CONVENIENCE_METHODS['isEqual:'] = (('__eq__', __eq__2),)
-CONVENIENCE_METHODS['isGreaterThan:'] = (('__gt__', __gt__),)
-CONVENIENCE_METHODS['isGreaterThanOrEqualTo:'] = (('__ge__', __ge__),)
-CONVENIENCE_METHODS['isLessThan:'] = (('__lt__', __lt__),)
-CONVENIENCE_METHODS['isLessThanOrEqualTo:'] = (('__le__', __le__),)
-CONVENIENCE_METHODS['isNotEqualTo:'] = (('__ne__', __ne__),)
-CONVENIENCE_METHODS['lenght'] = (('__len__', __len__2),)
-CONVENIENCE_METHODS['objectAtIndex:'] = (('__getitem__', __getitem__2),)
-CONVENIENCE_METHODS['removeObjectAtIndex:'] = (('__detitem__', __delitem__2),)
-CONVENIENCE_METHODS['replaceObjectAtIndex:withObject:'] = (('__setitem__', __setitem__2),)
+CONVENIENCE_METHODS['setObject:forKey:'] = (('__setitem__',
+					     lambda self, key, value: self.setObject_forKey_( value, key ) ), )
 
+CONVENIENCE_METHODS['count'] = (('__len__',
+				 lambda self: self.count() ),)
 
+CONVENIENCE_METHODS['description'] = (('__repr__',
+				       lambda self: self.description() ),)
+
+CONVENIENCE_METHODS['containsObject:'] = (('__contains__',
+					   lambda self, elem: (self.containsObject_(elem) != 0)),)
+
+CONVENIENCE_METHODS['hash'] = (('__hash__',
+				lambda self: self.hash() ),)
+
+CONVENIENCE_METHODS['isEqualTo:'] = (('__eq__',
+				      lambda self, other: self.isEqualTo_( other ) ),)
+
+CONVENIENCE_METHODS['isEqual:'] = (('__eq__',
+				    lambda self, other: self.isEqual_( other ) ),)
+
+CONVENIENCE_METHODS['isGreaterThan:'] = (('__gt__',
+					  lambda self, other: self.isGreaterThan_( other ) ),)
+
+CONVENIENCE_METHODS['isGreaterThanOrEqualTo:'] = (('__ge__',
+						   lambda self, other: self.isGreaterThanOrEqualTo_( other ) ),)
+
+CONVENIENCE_METHODS['isLessThan:'] = (('__lt__',
+				       lambda self, other: self.isLessThan_( other ) ),)
+
+CONVENIENCE_METHODS['isLessThanOrEqualTo:'] = (('__le__',
+						lambda self, other: self.isLessThanOrEqualTo_( other ) ),)
+
+CONVENIENCE_METHODS['isNotEqualTo:'] = (('__ne__',
+					 lambda self, other: self.isNotEqualTo_( other ) ),)
+
+CONVENIENCE_METHODS['length'] = (('__len__',
+				  lambda self: self.length() ),)
+
+def __getitem__objectAtIndexWithSlice(self, x, y):
+	l = len(self)
+	r = y - x
+	if r < 0:
+		return []
+	if (r - x) > l:
+		r = l - x
+	return self.subarrayWithRange_( (x, r) )
+CONVENIENCE_METHODS['objectAtIndex:'] = (('__getitem__', lambda self, index: self.objectAtIndex_( index )),
+					 ('__getslice__', __getitem__objectAtIndexWithSlice) )
+
+def __delslice__removeObjectAtIndex(self, x, y):
+	l = len(self)
+	r = y - x
+	if r < 0:
+		return
+	if (r - x) > l:
+		r = l - x
+	return self.removeObjectsInRange_( (x, r) )
+	
+CONVENIENCE_METHODS['removeObjectAtIndex:'] = (('__delitem__', lambda self, index: self.removeObjectAtIndex_( index )),
+					       ('__delslice__', __delslice__removeObjectAtIndex ) )
+
+CONVENIENCE_METHODS['replaceObjectAtIndex:withObject:'] = (('__setitem__',
+							    lambda self, index, anObject: self.replaceObjectAtIndex_withObject_( index, anObject) ),)
+
+def __setslice__replaceObjectAtIndex_withObject(self, x, y, v):
+	l = len(self)
+	r = y - x
+	if r < 0:
+		return
+	if (r - x) > l:
+		r = l - x
+	return self.replaceObjectsInRange_withObjectsFromArray_( (x, r), v )
+CONVENIENCE_METHODS['replaceObjectsInRange:withObjectsFromArray:'] = (('__setslice__', __setslice__replaceObjectAtIndex_withObject), )
 
 # Mapping protocol
-
-
-def mapping_keys(self):
-	"""
-	NSDictionary.keys()
-	"""
-	enum = self.keyEnumerator()
-	result = []
-	key = enum.nextObject()
-	while key:
-		result.append(key)
-		key = enum.nextObject()
-	return result
-
-def mapping_values(self):
-	"""
-	NSDictionary.values()
-	"""
-	enum = self.objectEnumerator()
-	result = []
-	value = enum.nextObject()
-	while value:
-		result.append(value)
-		value = enum.nextObject()
-	return result
 
 # Mappings (e.g. like dict)
 # TODO (not all are needed or even possible): 
 #   iter*, update, pop, popitem, setdefault
 # __str__ would be nice (as obj.description()),
-CONVENIENCE_METHODS['keyEnumerator'] = (('keys', mapping_keys),)
-CONVENIENCE_METHODS['objectEnumerator'] = (('values', mapping_values),)
+
+def enumeratorGenerator(anEnumerator):
+	nextObject = anEnumerator.nextObject()
+	while (nextObject):
+		yield nextObject
+		nextObject = anEnumerator.nextObject()
+
+CONVENIENCE_METHODS['keyEnumerator'] = (('keys',
+					 lambda self: self.allKeys()),
+
+					('__iter__',
+					 lambda self: enumeratorGenerator( self.keyEnumerator() ) ),
+
+					('iterkeys',
+					 lambda self: enumeratorGenerator( self.keyEnumerator() ) ) )
+
+CONVENIENCE_METHODS['objectEnumerator'] = (('values', lambda self: self.allValues()),)
 CONVENIENCE_METHODS['removeAllObjects'] = (('clear', lambda self: self.removeAllObjects()),)
 CONVENIENCE_METHODS['dictionaryWithDictionary:'] = (('copy', lambda self: type(self).dictionaryWithDictionary_(self)),)
